[package]
name = "wasi-experimental-http-wasmtime-sample"
version = "0.1.0"
authors = ["Radu Matei <radu.matei@microsoft.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
futures = "0.3"
http = "0.2"
reqwest = { version = "0.11", default-features = true, features = ["json", "blocking"] }
tokio = { version = "1.1", features = ["full"] }
wasmtime = "0.23"
wasmtime-wasi = "0.23"
wasi-common = "0.23"
wasi-cap-std-sync = "0.23"
wasi-experimental-http = {path = "crates/wasi-experimental-http"}
wasi-experimental-http-wasmtime = {path = "crates/wasi-experimental-http-wasmtime"}

[workspace]
members = [
    "crates/wasi-experimental-http",
    "crates/wasi-experimental-http-wasmtime",
    "tests/simple"
]
