[package]
    name        = "wasi-experimental-http-wasmtime"
    version     = "0.7.0"
    authors     = [ "Radu Matei <radu.matei@microsoft.com>" ]
    edition     = "2021"
    repository  = "https://github.com/deislabs/wasi-experimental-http"
    license     = "MIT"
    description = "Experimental HTTP library for WebAssembly in Wasmtime"
    readme      = "readme.md"

[features]
    default = [ "native-tls" ]
    native-tls = [ "openssl", "reqwest/native-tls" ]
    rustls-tls = [ "reqwest/rustls-tls" ]

[dependencies]
    anyhow = "1.0"
    cfg-if = "1.0.0"
    bytes = "1"
    futures = "0.3"
    http = "0.2"
    reqwest = { version = "0.11", default-features = true, features = [
        "json",
        "blocking",
    ] }
    openssl = { version = "0.10.38", optional = true }
    rmp-serde = "0.15.5"
    serde = { version = "1.0.132", features = [ "derive" ] }
    thiserror = "1.0"
    tokio = { version = "1.4.0", features = [ "full" ] }
    tracing = { version = "0.1", features = [ "log" ] }
    url = "2.2.1"
    wasmtime = "0.31"
    wasmtime-wasi = "0.31"
    wasi-common = "0.31"
    wasi-experimental-http = { path = "../wasi-experimental-http" }
