[package]
name = "wasi-experimental-http"
version = "0.1.0"
authors = ["Radu Matei <radu.matei@microsoft.com>"]
edition = "2018"
repository = "https://github.com/deislabs/wasi-experimental-http"
license = "MIT"
description = "Experimental HTTP library for WebAssembly"

[dependencies]
anyhow = "1.0"
bytes = "1"
http = "0.2"
serde_json = "1.0"
serde = { version = "1.0.100", features = ["derive"] }
