[package]
    name        = "wasi-experimental-http"
    version     = "0.7.0"
    authors     = [ "Radu Matei <radu.matei@microsoft.com>" ]
    edition     = "2018"
    repository  = "https://github.com/deislabs/wasi-experimental-http"
    license     = "MIT"
    description = "Experimental HTTP library for WebAssembly"
    readme      = "readme.md"

[dependencies]
    anyhow    = "1.0"
    bytes     = "1"
    http      = "0.2"
    rmp-serde = "0.15.5"
    serde     = { version = "1.0.132", features = [ "derive" ] }
    thiserror = "1.0"
    tracing   = { version = "0.1", features = [ "log" ] }
