[package]
name    = "simple-wasi-http-tests"
version = "0.1.0"
authors = ["Radu Matei <radu.matei@microsoft.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
bytes                  = "1"
http                   = "0.2"
wasi-experimental-http = { path = "../../crates/wasi-experimental-http" }
